# QtAlarm

./: CMakeLists.txt  README.md
source/: CMakeLists.txt  alarmdata.h  alarmeditor.cpp  alarmeditor.h  alarmitemdelegate.cpp  alarmitemdelegate.h  alarmwindow.cpp  alarmwindow.h  main.cpp  resources.qrc
